--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-test
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>AWOAKWOWKOAWOK 😹</title>
+  </head>
+  <body>
+    <h1>You've has been rickrolled</h1>
+  </body>
+</html>
