--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>You've has been rickrolled</h1>
-    <img src="https://www.bing.com/th/id/OGC.a7e3877fda27b7b6514e7aa74e6049f6?pid=1.7&rurl=https%3a%2f%2fi.imgflip.com%2f5zbwfe.gif&ehk=PLeRy7Ss7OLeHnppOXM3cnUDaVsESwwGUfq6d2jAtcM%3d" />
+    <img src="https://i.imgflip.com/5zbwfe.gif" />
   </body>
 </html>
