--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>You've has been rickrolled</h1>
+    <img src="https://th.bing.com/th/id/OIP.VSiMME0wNO-WhGFU74gaMgGAF8?w=214&h=211&c=7&r=0&o=5&pid=1.7" />
     <img src="https://i.imgflip.com/5zbwfe.gif" />
   </body>
 </html>
