--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AWOAKWOWKOAWOK 😹</title>
+    <title>Github Pages</title>
   </head>
   <body>
     <h1>You've has been rickrolled</h1>
